--- a/examples/run/cpu/CMakeLists.txt
+++ b/examples/run/cpu/CMakeLists.txt
@@ -20,6 +20,10 @@ traccc_add_executable( truth_fitting_example "truth_fitting_example.cpp"
    LINK_LIBRARIES vecmem::core detray::io detray::detectors traccc::core
    traccc::io traccc::performance traccc::options)
 
+traccc_add_executable( truth_fitting_with_alignment_example "truth_fitting_with_alignment_example.cpp"
+   LINK_LIBRARIES vecmem::core detray::io detray::detectors traccc::core
+   traccc::io traccc::performance traccc::options)
+ 
 traccc_add_executable( ccl_example "ccl_example.cpp"
    LINK_LIBRARIES vecmem::core traccc::core traccc::io)
 
